--- a/src/global.css
+++ b/src/global.css
@@ -1,13 +1,13 @@
-@import url("https://fonts.googleapis.com/css?family=Poppins:400,500,600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400&display=swap");
 
 html {
   padding: 0;
   margin: 0;
-  font-family: "Poppins", sans-serif !important;
+  font-family: "Arvo", serif !important;
 }
 
 body {
-  font-family: "Poppins", sans-serif !important;
+  font-family: "Arvo", serif !important;
 }
 
 section {
@@ -19,34 +19,34 @@ section {
   height: 100%;
   display: flex;
   justify-content: center;
-  flex-direction: column
+  flex-direction: column;
 }
 
-.centerItems{
+.centerItems {
   height: 80vh;
   display: flex;
   justify-content: center;
-  flex-direction: column
+  flex-direction: column;
 }
 
-.inputBox{
+.inputBox {
   width: 100%;
-  background-color: #673AB7;
+  background-color: #673ab7;
   border: none;
   border-radius: 10px;
   padding: 20px;
   text-decoration-color: white;
-  color: white
+  color: white;
 }
 
-textarea:focus{
-  animation: none !important
+textarea:focus {
+  animation: none !important;
 }
 
-footer{
-  color: #B9A4DE
+footer {
+  color: #b9a4de;
 }
 
 footer a {
-  color: white
+  color: white;
 }
